--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,7 +18,13 @@
         <item>八年级</item>
         <item>九年级</item>
     </string-array>
-  
+    <string-array name="education_options">
+        <item>小学</item>
+        <item>初中</item>
+        <item>高中</item>
+        <item>本科</item>
+        <item>研究生</item>
+    </string-array>
     <string name="toggle_orientation_desc">切换屏幕方向</string>
     <string name="title_diary">心情日记</string>
     <string name="title_tree">心灵树洞</string>
